Ajustes de presentación

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Visualización interactiva de departamentos y municipios de Colombia usando servicios WMS y WFS de GeoServer">
-    <meta name="author" content="Taller de Servicios Web Geográficos">
+    <meta name="author" content="Curso de Servicios Web Geográficos">
     <title>Colombia - Departamentos y Municipios | Servicios Web Geográficos</title>
 
     <!-- Leaflet CSS -->
@@ -68,7 +68,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2024 Taller de Servicios Web Geográficos | Desarrollado con Leaflet.js y GeoServer</p>
+        <p>&copy; 2024 Curso de Servicios Web Geográficos | Desarrollado con Leaflet.js y GeoServer</p>
     </footer>
 
     <!-- Leaflet JavaScript -->
